refactor API response
