# modules/language/model/model.go
@@ -1,8 +1,11 @@
 package model
 
 import (
+	"net/http"
+	"strings"
 	"time"
 
+	"github.com/gofiber/fiber/v2"
 	"github.com/roysitumorang/bible/helper"
 	versionModel "github.com/roysitumorang/bible/modules/version/model"
 )
@@ -23,7 +26,39 @@ type (
 
 	// swagger:model ResponseLanguages
 	ResponseLanguages struct {
-		*helper.Response
-		Data []Language `json:"data"`
+		RequestID  string     `json:"request_id"`
+		RequestURL string     `json:"request_url"`
+		StatusCode int        `json:"status_code"`
+		Message    string     `json:"message,omitempty"`
+		Status     string     `json:"status"`
+		Timestamp  time.Time  `json:"timestamp"`
+		Latency    string     `json:"latency"`
+		Data       []Language `json:"data"`
+		App        string     `json:"app"`
 	}
 )
+
+func NewResponseLanguages(statusCode int, message string, data []Language) *ResponseLanguages {
+	return &ResponseLanguages{
+		StatusCode: statusCode,
+		Message:    message,
+		Status:     http.StatusText(statusCode),
+		Timestamp:  time.Now(),
+		Data:       data,
+		App:        helper.APP,
+	}
+}
+
+func (r *ResponseLanguages) WriteResponse(c *fiber.Ctx) error {
+	if r.StatusCode == fiber.StatusNoContent {
+		return c.SendStatus(r.StatusCode)
+	}
+	var builder strings.Builder
+	_, _ = builder.WriteString(c.Method())
+	_, _ = builder.WriteString(" ")
+	_, _ = builder.Write(c.Request().URI().FullURI())
+	r.RequestURL = builder.String()
+	r.RequestID = helper.ByteSlice2String(c.Response().Header.Peek(fiber.HeaderXRequestID))
+	r.Latency = time.Since(c.Context().Time()).String()
+	return c.Status(r.StatusCode).JSON(r)
+}
